# fp

./: .gitignore  CMakeLists.txt  README.md
src/fp/: CMakeLists.txt  SOURCES.cmake  compilation_error.h  error_codes.h  literal_types.h  source_code.cpp  source_code.h
src/fp/ast/: base.h  base_node.h  binary_op.h  empty.h  error.h  identifier.h  import.h  integer.h  node.cpp  node.h  postfix_op.h  prefix_op.h
src/fp/ast/detail/: base_node.h  variant_node.h
src/fp/ast/types/: binary_op.h  identifier.h  number.h
src/fp/common/: diagnostic.cpp  diagnostic.h  diagnostic_report.cpp  diagnostic_report.h  error.h  input.cpp  input.h  source_location.h  source_origin.h  symbol.h  types.h
src/fp/common/detail/: diagnostic_printer.cpp  diagnostic_printer.h  diagnostic_printing.h
src/fp/diagnostic/: problem.cpp  problem.h  report.cpp  report.h
src/fp/diagnostic/print/: to_ostream.cpp  to_ostream.h  to_terminal.cpp  to_terminal.h
src/fp/lex/: attribute.h  binary_ops.h  error.h  keywords.h  symbol.h  token.cpp  token.h  token_list.h  token_source.h  token_value.h  token_view.h  tokenize.cpp  tokenize.h  tokenized_list.cpp  tokenized_list.h
src/fp/lex/detail/: characters_range.h  identifier_symbols.h  string_interpolation_stack.h  symbol_range.h  tokenization_state.h  tokenize_keyword_or_identifier.h  tokenize_number.h  tokenize_string.h  tokenizer.h  tokenizer_state.h  tokenizers_table.h
src/fp/lex/print/: to_terminal.cpp  to_terminal.h
src/fp/lexer/: temp.cpp
src/fp/parse/: error.h  parse.cpp  parse.h
src/fp/parse/detail/: constexpr_token_table.h  parser.h  (+6 more)
src/fp/syntax/: parse.cpp  parse.h
src/fp/util/: as_string.h  assert.cpp  assert.h  box.h  cast.h  color.h  color_support.h  color_value.h  colored_text.h  constexpr_table.h  context_list.h  context_value.h  deref.h  enum_class.h  fundamental.h  join.h  match.h  named_tuple.h  overloaded.h  pp_seq.h  print_separated.h  record.h  static_string_view.h  table.h  to_string.h  type_constant.h  type_name.cpp  type_name.h  va_args.h  vector_view.h  with.h
test/: CMakeLists.txt  SOURCES.cmake
test/include/: assert_as_string.h  assert_macro_eq.h  assert_same.h  catergorized_test.h
test/include/test-util/: assert_macro_eq.h  assert_type_eq.h  catergorized_test.h
test/lex/: character_literal.cpp  single_tokens.cpp  stray_characters.cpp  temp.cpp  test.cpp  tokenize.cpp  unicode_characters.cpp
test/lex/examples/: all_tokens.inl  string_interpolation.inl
test/lexer/: test.cpp
test/parse/: test.cpp
test/util/: box.cpp  constexpr_table.cpp  context_list.cpp  context_value.cpp  enum_class.cpp  match.cpp  named_tuple.cpp  overloaded.cpp  pp_seq.cpp  record.cpp  table.cpp  test_box.cpp  test_enum_class.cpp  test_named_tuple.cpp  test_pp_seq.cpp  test_type_name.cpp  test_va_args.cpp  type_name.cpp  va_args.cpp
(+92 files in other folders)
